--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -33,8 +33,14 @@ training:
   early_stopping_patience: 20
 
 loss:
-  lambda_nonneg: 0.06
-  lambda_smooth: 0.03
+  lambda_nonneg: 0.05
+  lambda_smooth: 0.02
+  lambda_extreme: 1.0      # 建议先从 1.0 开始
+  lambda_relative: 0.0     # 暂时关掉
+  extreme_alpha: 4.0       # Z≈1 处的额外放大 ~4 倍，修正Z=1区域的预测误差
+
+
+
 
 paths:
   data: data/Water.csv
